--- a/components/cards.html
+++ b/components/cards.html
@@ -1,5 +1,5 @@
 <div style="width: 300px; padding: 4rem">
-  <div class="card card--secundary">
+  <div class="card card--secondary">
     <header class="card__header">Card Title</header>
     <div class="card__body">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, optio.
